[package]
name = "hashmore"
version = "0.1.0"
authors = ["Merklefruit <merklefruit@proton.me>"]
description = "More hashmaps for Rust"
edition = "2021"
rust-version = "1.70"
license = "MIT"
exclude = [".github/", "benches/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hashbrown = "0.14"
