[package]
name = "hashmore"
version = "0.1.0"
authors = ["Merklefruit <merklefruit@proton.me>"]
description = "More hash-based primitive data structures for Rust"
edition = "2021"
license = "MIT"
exclude = [".github/", "benches/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hashbrown = "0.14"
